--- a/tests/packagedcode/data/debian/copyright/debian-2019-11-15/main/d/dovecot/stable_copyright-detailed.expected.yml
+++ b/tests/packagedcode/data/debian/copyright/debian-2019-11-15/main/d/dovecot/stable_copyright-detailed.expected.yml
@@ -236,15 +236,15 @@ matches:
     is_license_tag: yes
     is_license_intro: no
     matched_text: 'License: apache-2.0'
-  - score: '94.5'
+  - score: '96.4'
     start_line: 1
     end_line: 14
     matcher: 3-seq
-    rule_length: 109
-    matched_length: 103
-    match_coverage: '94.5'
+    rule_length: 111
+    matched_length: 107
+    match_coverage: '96.4'
     rule_relevance: 100
-    identifier: apache-2.0_847.RULE
+    identifier: apache-2.0_231.RULE
     license_expression: apache-2.0
     is_license_text: no
     is_license_notice: yes
@@ -256,7 +256,7 @@ matches:
       you may not use this file except in compliance with the License.
       You may obtain a copy of the License at
 
-          [http]://www.apache.org/licenses/LICENSE-2.0
+          http://www.apache.org/licenses/LICENSE-2.0
 
       Unless required by applicable law or agreed to in writing, software
       distributed under the License is distributed on an "AS IS" BASIS,
@@ -264,7 +264,7 @@ matches:
       See the License for the specific language governing permissions and
       limitations under the License.
 
-      On Debian systems, the [full] [text] [of] [the] Apache License, Version 2.0 can be
+      On Debian systems, the [full] text of the Apache License, Version 2.0 can be
       found [at] /usr/share/common-licenses/Apache-2.0.
   - score: '100.0'
     start_line: 3
