--- a/tests/packagedcode/data/debian/copyright/debian-2019-11-15/main/p/pam-u2f/stable_copyright-detailed.expected.yml
+++ b/tests/packagedcode/data/debian/copyright/debian-2019-11-15/main/p/pam-u2f/stable_copyright-detailed.expected.yml
@@ -13,7 +13,7 @@ declared_license:
 license_expression: bsd-simplified AND bsd-simplified AND (gpl-2.0-plus AND gpl-2.0-plus AND
   gpl-2.0) AND (gpl-2.0-plus AND gpl-2.0-plus AND gpl-2.0) AND fsf-unlimited AND (gpl-3.0-plus
   AND gpl-3.0-plus AND gpl-3.0 AND gpl-3.0) AND (gpl-2.0-plus AND gpl-2.0-plus AND libtool-exception-2.0
-  AND gpl-2.0-plus AND gpl-2.0)
+  AND gpl-2.0 AND gpl-2.0)
 copyright: |
   Copyright (c) 2006-2018 Yubico AB
   2014-2016 Yubico AB
@@ -46,15 +46,15 @@ matches:
       This file is free software; the Free Software Foundation gives
       unlimited permission to copy and/or distribute it, with or without
       modifications, as long as this notice is preserved.
-  - score: '93.02'
+  - score: '95.24'
     start_line: 1
     end_line: 4
     matcher: 3-seq
-    rule_length: 43
+    rule_length: 42
     matched_length: 40
-    match_coverage: '93.02'
+    match_coverage: '95.24'
     rule_relevance: 100
-    identifier: gpl-2.0-plus_434.RULE
+    identifier: gpl-2.0-plus_356.RULE
     license_expression: gpl-2.0-plus
     is_license_text: no
     is_license_notice: yes
@@ -108,16 +108,16 @@ matches:
       if you distribute this file as part of a program or library that
       is built using GNU Libtool, you may include this file under the
       same distribution terms that you use for the rest of that program.
-  - score: '24.24'
+  - score: '26.67'
     start_line: 11
     end_line: 12
     matcher: 3-seq
-    rule_length: 33
+    rule_length: 30
     matched_length: 8
-    match_coverage: '24.24'
+    match_coverage: '26.67'
     rule_relevance: 100
-    identifier: gpl-2.0-plus_101.RULE
-    license_expression: gpl-2.0-plus
+    identifier: gpl-2.0_774.RULE
+    license_expression: gpl-2.0
     is_license_text: no
     is_license_notice: yes
     is_license_reference: no
