--- a/tests/packagedcode/data/debian/copyright/debian-2019-11-15/non-free/f/firmware-nonfree/stable_firmware-myricom.copyright-detailed.expected.yml
+++ b/tests/packagedcode/data/debian/copyright/debian-2019-11-15/non-free/f/firmware-nonfree/stable_firmware-myricom.copyright-detailed.expected.yml
@@ -3,15 +3,15 @@ declared_license:
 license_expression: bsd-source-code
 copyright: Copyright (c) 2006-2010, Myricom Inc.
 matches:
-  - score: '96.17'
+  - score: '95.16'
     start_line: 1
     end_line: 27
     matcher: 3-seq
-    rule_length: 183
-    matched_length: 176
-    match_coverage: '96.17'
+    rule_length: 186
+    matched_length: 177
+    match_coverage: '95.16'
     rule_relevance: 100
-    identifier: mentalis_2.RULE
+    identifier: bsd-source-code_1.RULE
     license_expression: bsd-source-code
     is_license_text: yes
     is_license_notice: no
@@ -21,15 +21,15 @@ matches:
     matched_text: "binary [firmware] [may] [be] [downloaded] [from]\n [https]://[git].[kernel].[org]/[cgit]/[linux]/[kernel]/[git]/[firmware]/[linux]-[firmware].[git]\n\
       \ \n [Copyright] ([c]) [2006]-[2010], [Myricom] [Inc].\n [All] [rights] [reserved].\n\
       \ \n [Redistribution] [and] [use] [in] [source] [and] [binary] forms, with or without\n\
-      \ modification, are permitted provided that the following conditions are met:\n \n  [1].\
+      \ modification, are permitted provided that the following conditions are met:\n \n  1.\
       \ Redistributions of source code must retain the above copyright notice,\n     this list\
-      \ of conditions and the following disclaimer.\n \n  [2]. Neither the name of [the] [Myricom]\
-      \ Inc, nor the names of its\n     contributors may be used to endorse or promote products\
+      \ of conditions and the following disclaimer.\n \n  2. Neither the name of the [Myricom]\
+      \ [Inc], nor the names of its\n     contributors may be used to endorse or promote products\
       \ derived from\n     this software without specific prior written permission.\n \n THIS\
       \ SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS \"AS IS\"\n AND ANY EXPRESS\
       \ OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE\n IMPLIED WARRANTIES OF MERCHANTABILITY\
       \ AND FITNESS FOR A PARTICULAR PURPOSE\n ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT\
-      \ OWNER OR CONTRIBUTORS BE\n LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY,\
+      \ [OWNER] OR CONTRIBUTORS BE\n LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY,\
       \ OR\n CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF\n SUBSTITUTE\
       \ GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS\n INTERRUPTION) HOWEVER\
       \ CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN\n CONTRACT, STRICT LIABILITY, OR TORT\
