--- a/tests/packagedcode/data/debian/copyright/debian-slim-2021-04-07/usr/share/doc/bash/copyright-detailed.expected.yml
+++ b/tests/packagedcode/data/debian/copyright/debian-slim-2021-04-07/usr/share/doc/bash/copyright-detailed.expected.yml
@@ -122,28 +122,27 @@ matches:
       \ by the Free Software Foundation; with [no]\n  Invariant Sections, [no] [Front]-[Cover]\
       \ [Texts], [and] no Back-Cover Texts.\n  A copy of the license is included in the section\
       \ entitled\n  ``GNU Free Documentation License''."
-  - score: '100.0'
+  - score: '81.33'
     start_line: 71
-    end_line: 76
-    matcher: 2-aho
-    rule_length: 60
-    matched_length: 60
-    match_coverage: '100.0'
+    end_line: 78
+    matcher: 3-seq
+    rule_length: 75
+    matched_length: 61
+    match_coverage: '81.33'
     rule_relevance: 100
-    identifier: gfdl-1.3-plus.RULE
+    identifier: gfdl-1.3-plus2.RULE
     license_expression: gfdl-1.3-plus
     is_license_text: no
     is_license_notice: yes
     is_license_reference: no
     is_license_tag: no
     is_license_intro: no
-    matched_text: |
-      Permission is granted to copy, distribute and/or modify this document
-        under the terms of the GNU Free Documentation License, Version 1.3 or
-        any later version published by the Free Software Foundation; with no
-        Invariant Sections, no Front-Cover Texts, and no Back-Cover Texts.
-        A copy of the license is included in the section entitled
-        ``GNU Free Documentation License''.
+    matched_text: "Permission is granted to copy, distribute and/or modify this document\n \
+      \ under the terms of the GNU Free Documentation License, Version 1.3 or\n  any later version\
+      \ published by the Free Software Foundation; with no\n  Invariant Sections, no Front-Cover\
+      \ Texts, and no Back-Cover Texts.\n  A copy of the license is included in the section\
+      \ entitled\n  ``GNU Free Documentation License''.\n \n [lib]/[readline]/[doc]/[rltech].[texi]\
+      \ ([part] [of] [the] GNU"
   - score: '100.0'
     start_line: 82
     end_line: 84
@@ -214,28 +213,27 @@ matches:
       \ resulting derived work is distributed under the terms of a\n  permission notice identical\
       \ to this one.\n \n  Permission is granted to copy and distribute translations of this\
       \ manual\n  into another language, under the above conditions for modified versions."
-  - score: '100.0'
+  - score: '81.33'
     start_line: 132
-    end_line: 137
-    matcher: 2-aho
-    rule_length: 60
-    matched_length: 60
-    match_coverage: '100.0'
+    end_line: 139
+    matcher: 3-seq
+    rule_length: 75
+    matched_length: 61
+    match_coverage: '81.33'
     rule_relevance: 100
-    identifier: gfdl-1.3-plus.RULE
+    identifier: gfdl-1.3-plus2.RULE
     license_expression: gfdl-1.3-plus
     is_license_text: no
     is_license_notice: yes
     is_license_reference: no
     is_license_tag: no
     is_license_intro: no
-    matched_text: |
-      Permission is granted to copy, distribute and/or modify this document
-        under the terms of the GNU Free Documentation License, Version 1.3 or
-        any later version published by the Free Software Foundation; with no
-        Invariant Sections, no Front-Cover Texts, and no Back-Cover Texts.
-        A copy of the license is included in the section entitled
-        ``GNU Free Documentation License''.
+    matched_text: "Permission is granted to copy, distribute and/or modify this document\n \
+      \ under the terms of the GNU Free Documentation License, Version 1.3 or\n  any later version\
+      \ published by the Free Software Foundation; with no\n  Invariant Sections, no Front-Cover\
+      \ Texts, and no Back-Cover Texts.\n  A copy of the license is included in the section\
+      \ entitled\n  ``GNU Free Documentation License''.\n \n [readline]/[doc]/{[hstech],[hsuser]}.[texi]\
+      \ (GNU"
   - score: '99.0'
     start_line: 144
     end_line: 160
